Stop text overlapping on the image

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
@@ -118,7 +118,6 @@
         text-align: left
         margin-right: 25px
         @include breakpoint(desktop, up)
-            margin-top: -45px
     .imagepromo__contentbox
         text-align: left
         margin-right: 25px
